--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
 <body>
-    <h1>This is a heading</h1>
+    <header>
+        <h1>Student Bio</h1>
+    </header>
+    <div class="container">
+        <section id="main-bio">
+            <h2>Samuel Warren</h2>
+            <img id="bio-image"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVy96cIRcKgayy5kAI7ix-zHj5P_lUo8VcWbvQxa2quNCcwYb3">
+            <p>Words words words</p>
+        </section>
 
-    <p>This is a paragraph</p>
+        <section id="contact-info">
+            <h2>Contact Info</h2>
+            <ul>
+                <li><strong>Email: </strong> <a href="">sjwarren91@gmail.com</a></li>
+                <li><strong>Github: </strong><a href="https://github.com/sjwarren91" 
+                    target="_blank">Samuel Warren</a></li>
+                <li><strong>Portfolio: </strong> <a href="">Coming Soon</a></li>
+            </ul>
+        </section>
+    </div>
 
-    <h2>This is another heading</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
 </body>
 
 </html>
