added more info to paragraph

--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
             <h2>Samuel Warren</h2>
             <img id="bio-image"
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVy96cIRcKgayy5kAI7ix-zHj5P_lUo8VcWbvQxa2quNCcwYb3">
-            <p>Words words words</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ligula ullamcorper malesuada proin libero nunc consequat. Morbi tristique senectus
+                et netus. Morbi tristique senectus et netus et malesuada fames ac turpis. Auctor urna nunc id cursus
+                metus aliquam eleifend mi. Mi bibendum neque egestas congue quisque egestas diam. In mollis nunc sed id
+                semper risus. Amet facilisis magna etiam tempor. Molestie a iaculis at erat pellentesque. Hendrerit
+                dolor magna eget est. Purus sit amet volutpat consequat mauris nunc. Pellentesque id nibh tortor id
+                aliquet lectus proin nibh nisl. Risus quis varius quam quisque id diam vel. Arcu vitae elementum
+                curabitur vitae nunc sed velit dignissim.</p>
         </section>
 
         <section id="contact-info">
             <h2>Contact Info</h2>
             <ul>
                 <li><strong>Email: </strong> <a href="">sjwarren91@gmail.com</a></li>
-                <li><strong>Github: </strong><a href="https://github.com/sjwarren91" 
-                    target="_blank">Samuel Warren</a></li>
+                <li><strong>Github: </strong><a href="https://github.com/sjwarren91" target="_blank">Samuel Warren</a>
+                </li>
                 <li><strong>Portfolio: </strong> <a href="">Coming Soon</a></li>
             </ul>
         </section>
