add about me section padding/margins, change font style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>Samuel Warren</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                 <div class="header">ABOUT ME</div>
 
                 <div class="self">
-                    <img src="https://picsum.photos/id/532/300/200" alt="">
+                    <img src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
                     <div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ornare elementum
                         tempus. Nunc fermentum, eros hendrerit tristique pretium, nibh dolor fermentum nisl, at viverra
                         mi est eu purus. Nam varius velit ac nulla pharetra molestie. Etiam eleifend vel arcu ut
