about me styling, add skill icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/37098aed8c.js"></script>
     <title>Samuel Warren</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
@@ -45,19 +46,49 @@
 
             <div class="container flex">
 
-                <div class="header">ABOUT ME</div>
+                <div class="header">ABOUT</div>
 
-                <div class="self">
+                <div class="self flex row">
                     <img src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
-                    <div class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ornare elementum
-                        tempus. Nunc fermentum, eros hendrerit tristique pretium, nibh dolor fermentum nisl, at viverra
-                        mi est eu purus. Nam varius velit ac nulla pharetra molestie. Etiam eleifend vel arcu ut
-                        lobortis. Vivamus sed mattis nunc. Donec nec turpis eget nibh scelerisque accumsan non quis
-                        justo. Vivamus aliquam ut turpis et faucibus. Sed imperdiet vulputate est. Nunc consequat, eros
-                        nec sollicitudin molestie, odio dui elementum odio, ut scelerisque augue arcu eget dui. Nulla
-                        tempor dignissim tristique. Donec venenatis tincidunt diam, non posuere arcu aliquam a. Vivamus
-                        quis tristique erat. Curabitur tincidunt ullamcorper turpis nec hendrerit. Etiam et diam at
-                        massa aliquet mollis.
+                    <div class="flex bio">
+                        <div class="bio-header">Who am I?</div>
+                        <p>Full Stack Developer with a background in Electrical Engineering for which I received first
+                            class honours. Along with this I have a Certificate in Full Stack Development from Monash
+                            University. I have demonstrated experience with technologies across the full stack including
+                            but not limited to HTML/CSS, Javascript, Node.js, React.js and SQL. From my time as an
+                            Electrical Tendering Engineer, I have gained exceptional collaboration and customer facing
+                            skills. During this role I successfully delivered multiple high value solutions to various
+                            customers and stimulated new business growth. I am now looking to focus my career towards
+                            web development. Equipped in all five stages of the web development process from information
+                            gathering, planning, design and development, to testing and delivery. I am now ready to
+                            start developing beautiful and dynamic websites for you.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="skills flex row wrap">
+                    <div class="skills1 flex row">
+                        <div class="icon-wrap flex">
+                            <i class="fab fa-html5" style="color: #E34F26"></i>
+                            <div class="bio-header">HTML5</div>
+                        </div>
+                        <div class="icon-wrap flex">
+                            <i class="fab fa-css3-alt" style="color: #1A70B5"></i>
+                            <div class="bio-header">CSS3</div>
+                        </div>
+
+                    </div>
+                    <div class="skills2 flex row">
+                        <div class="icon-wrap flex">
+                            <i class="fab fa-react" style="color: #5ED4F4"></i>
+                            <div class="bio-header">REACT.JS</div>
+                        </div>
+                        <div class="icon-wrap flex">
+                            <i class="fab fa-node-js" style="color: #6A9D5B"></i>
+                            <div class="bio-header">NODE.JS</div>
+                        </div>
+
+
                     </div>
                 </div>
 
