colour theme change to redish

--- a/index.html
+++ b/index.html
@@ -48,18 +48,15 @@
 
                 <div class="header">ABOUT</div>
 
-                <div class="self flex row">
+                <div class="self flex row wrap">
                     <img src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
                     <div class="flex bio">
-                        <div class="bio-header">Who am I?</div>
-                        <p>Full Stack Developer with a background in Electrical Engineering for which I received first
-                            class honours. Along with this I have a Certificate in Full Stack Development from Monash
+                        <div class="section-header">Who am I?</div>
+                        <p>Full Stack Developer with a background in Electrical Engineering. Along with this I have a
+                            Certificate in Full Stack Development from Monash
                             University. I have demonstrated experience with technologies across the full stack including
-                            but not limited to HTML/CSS, Javascript, Node.js, React.js and SQL. From my time as an
-                            Electrical Tendering Engineer, I have gained exceptional collaboration and customer facing
-                            skills. During this role I successfully delivered multiple high value solutions to various
-                            customers and stimulated new business growth. I am now looking to focus my career towards
-                            web development. Equipped in all five stages of the web development process from information
+                            but not limited to HTML/CSS, Javascript, Node.js, React.js and SQL. Equipped in all five
+                            stages of the web development process from information
                             gathering, planning, design and development, to testing and delivery. I am now ready to
                             start developing beautiful and dynamic websites for you.
                         </p>
@@ -67,29 +64,29 @@
                 </div>
 
                 <div class="skills flex row wrap">
+
                     <div class="skills1 flex row">
                         <div class="icon-wrap flex">
                             <i class="fab fa-html5" style="color: #E34F26"></i>
-                            <div class="bio-header">HTML5</div>
+                            <div class="section-header">HTML5</div>
                         </div>
                         <div class="icon-wrap flex">
                             <i class="fab fa-css3-alt" style="color: #1A70B5"></i>
-                            <div class="bio-header">CSS3</div>
+                            <div class="section-header">CSS3</div>
                         </div>
-
                     </div>
+
                     <div class="skills2 flex row">
                         <div class="icon-wrap flex">
                             <i class="fab fa-react" style="color: #5ED4F4"></i>
-                            <div class="bio-header">REACT.JS</div>
+                            <div class="section-header">REACT.JS</div>
                         </div>
                         <div class="icon-wrap flex">
                             <i class="fab fa-node-js" style="color: #6A9D5B"></i>
-                            <div class="bio-header">NODE.JS</div>
+                            <div class="section-header">NODE.JS</div>
                         </div>
-
-
                     </div>
+
                 </div>
 
             </div>
