add portfolio placeholders and styling

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     </div>
                 </div>
 
+                <div class="section-header">My Skills</div>
+
                 <div class="skills flex row wrap">
 
                     <div class="skills1 flex row">
@@ -102,6 +104,16 @@
                 <div class="header">PORTFOLIO</div>
                 <div class="underline"></div>
 
+                <div class="projects flex row wrap">
+                    <div class="task">
+                        <img src="./assets/images/img1.jpg" alt="Project 1">
+                    </div>
+                    <div class="task"><img src="./assets/images/img2.jpg" alt="Project 2"></div>
+                    <div class="task"><img src="./assets/images/img3.jpg" alt="Project 3"></div>
+                    <div class="task"><img src="./assets/images/img4.jpg" alt="Project 4"></div>
+                    <div class="task"><img src="./assets/images/img5.jpg" alt="Project 5"></div>
+                    <div class="task"><img src="./assets/images/img6.jpg" alt="Project 6"></div>
+                </div>
             </div>
 
         </section>
