add contact section heading

--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
 
         </section>
 
-        <section id="contact"></section>
+        <section id="contact">
+
+            <div class="container flex">
+
+                <div class="header">CONTACT</div>
+                <div class="underline"></div>
+                
+
+            </div>
+
+        </section>
 
 
         <script src="./assets/javascript/script.js"></script>
