--- a/index.html
+++ b/index.html
@@ -120,11 +120,83 @@
 
         <section id="contact">
 
-            <div class="container flex">
+            <div class="flex">
 
                 <div class="header">CONTACT</div>
                 <div class="underline"></div>
-                
+
+                <div class="contact-wrap flex">
+                    <div class="contact-title">
+                        <img src="./assets/images/formimg.jpg" alt="">
+                        <span class="section-header">Want to get in touch?</span>
+                    </div>
+                    <form class="contact-form flex">
+                        <div class="input-wrap">
+                            <label for="" class="input-label">
+                                <svg class="form-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="none" stroke="#999999" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round" class="feather feather-user">
+                                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="12" cy="7" r="4"></circle>
+                                </svg>
+                            </label>
+                            <input class="form-input" type="text" name="name" id="name" placeholder="Full name">
+                        </div>
+
+                        <div class="input-wrap">
+                            <label for="" class="input-label">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-mail">
+                                    <path
+                                        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+                                    </path>
+                                    <polyline points="22,6 12,13 2,6"></polyline>
+                                </svg>
+                            </label>
+                            <input class="form-input" type="text" name="email" id="email"
+                                placeholder="E.g example@email.com">
+                        </div>
+
+                        <div class="input-wrap">
+                            <label for="" class="input-label">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-phone">
+                                    <path
+                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                                    </path>
+                                </svg>
+                            </label>
+                            <input class="form-input" type="text" name="phone" id="phone"
+                                placeholder="E.g. +61 100 000 000">
+                        </div>
+
+                        <div class="input-wrap">
+                            <label for="" class="text-label">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-message-circle">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                                    </path>
+                                </svg>
+                            </label>
+                            <textarea class="form-text" type="text" name="mesage" id="message"
+                                placeholder="Leave a message"></textarea>
+                        </div>
+
+                        <div class="form-button-wrap">
+                            <button id="form-button">Submit</button>
+                        </div>
+
+
+
+                    </form>
+
+                </div>
+
+
 
             </div>
 
