--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
             <div class="container flex">
 
-                <div class="header intersect" data-animation="slide-right">ABOUT</div>
-                <div class="underline intersect" data-animation="slide-right"></div>
+                <div class="header intersect" data-animation="slideRight">ABOUT</div>
+                <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="self flex row wrap">
-                    <img class="intersect"  data-animation="slide-right" src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
-                    <div class="flex bio intersect" data-animation="slide-left">
+                    <img class="intersect"  data-animation="slideRight" src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
+                    <div class="flex bio intersect" data-animation="slideLeft">
                         <div class="section-header">Who am I?</div>
                         <p>Full Stack Developer with a background in Electrical Engineering. Along with this I have a
                             Certificate in Full Stack Development from Monash
@@ -66,9 +66,9 @@
                     </div>
                 </div>
 
-                <div class="section-header intersect" data-animation="slide-right">My Skills</div>
+                <div class="section-header intersect" data-animation="slideRight">My Skills</div>
 
-                <div class="skills flex row wrap intersect" data-animation="slide-up">
+                <div class="skills flex row wrap intersect" data-animation="slideUp">
 
                     <div class="skills1 flex row">
                         <div class="icon-wrap flex">
