add animations portfolio and contact page

--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
 
                 <div class="section-header intersect" data-animation="slideRight">My Skills</div>
 
-                <div class="skills flex row wrap intersect" data-animation="slideUp">
+                <div class="skills flex row wrap">
 
                     <div class="skills1 flex row">
-                        <div class="icon-wrap flex">
+                        <div class="icon-wrap flex intersect" data-animation="slideUp">
                             <i class="fab fa-html5" style="color: #E34F26"></i>
                             <div class="section-header">HTML5</div>
                         </div>
-                        <div class="icon-wrap flex">
+                        <div class="icon-wrap flex intersect" data-animation="slideUp" data-delay="0.3s">
                             <i class="fab fa-css3-alt" style="color: #1A70B5"></i>
                             <div class="section-header">CSS3</div>
                         </div>
                     </div>
 
                     <div class="skills2 flex row">
-                        <div class="icon-wrap flex">
+                        <div class="icon-wrap flex intersect" data-animation="slideUp" data-delay="0.6s">
                             <i class="fab fa-react" style="color: #5ED4F4"></i>
                             <div class="section-header">REACT.JS</div>
                         </div>
-                        <div class="icon-wrap flex">
+                        <div class="icon-wrap flex intersect" data-animation="slideUp" data-delay="0.9s">
                             <i class="fab fa-node-js" style="color: #6A9D5B"></i>
                             <div class="section-header">NODE.JS</div>
                         </div>
@@ -101,18 +101,16 @@
 
             <div class="container flex">
 
-                <div class="header">PORTFOLIO</div>
-                <div class="underline"></div>
+                <div class="header intersect" data-animation="slideRight">PORTFOLIO</div>
+                <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="projects flex row wrap">
-                    <div class="task">
-                        <img src="./assets/images/img1.jpg" alt="Project 1">
-                    </div>
-                    <div class="task"><img src="./assets/images/img2.jpg" alt="Project 2"></div>
-                    <div class="task"><img src="./assets/images/img3.jpg" alt="Project 3"></div>
-                    <div class="task"><img src="./assets/images/img4.jpg" alt="Project 4"></div>
-                    <div class="task"><img src="./assets/images/img5.jpg" alt="Project 5"></div>
-                    <div class="task"><img src="./assets/images/img6.jpg" alt="Project 6"></div>
+                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img1.jpg" alt="Project 1"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img src="./assets/images/img2.jpg" alt="Project 2"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img src="./assets/images/img3.jpg" alt="Project 3"></div>
+                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img4.jpg" alt="Project 4"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img src="./assets/images/img5.jpg" alt="Project 5"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img src="./assets/images/img6.jpg" alt="Project 6"></div>
                 </div>
             </div>
 
@@ -122,16 +120,16 @@
 
             <div class="flex">
 
-                <div class="header">CONTACT</div>
-                <div class="underline"></div>
+                <div class="header intersect" data-animation="slideRight">CONTACT</div>
+                <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="contact-wrap flex">
-                    <div class="contact-title">
+                    <div class="contact-title intersect" data-animation="slideLeft">
                         <img src="./assets/images/formimg.jpg" alt="">
                         <span class="section-header">Want to get in touch?</span>
                     </div>
                     <form class="contact-form flex">
-                        <div class="input-wrap">
+                        <div class="input-wrap intersect" data-animation="slideRight">
                             <label for="" class="input-label">
                                 <svg class="form-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="#999999" stroke-width="2"
@@ -143,7 +141,7 @@
                             <input class="form-input" type="text" name="name" id="name" placeholder="Full name">
                         </div>
 
-                        <div class="input-wrap">
+                        <div class="input-wrap intersect" data-animation="slideRight">
                             <label for="" class="input-label">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
@@ -158,7 +156,7 @@
                                 placeholder="E.g example@email.com">
                         </div>
 
-                        <div class="input-wrap">
+                        <div class="input-wrap intersect" data-animation="slideLeft">
                             <label for="" class="input-label">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
@@ -172,7 +170,7 @@
                                 placeholder="E.g. +61 100 000 000">
                         </div>
 
-                        <div class="input-wrap">
+                        <div class="input-wrap intersect" data-animation="slideLeft">
                             <label for="" class="text-label">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="#999999" stroke-width="2" stroke-linecap="round"
@@ -186,7 +184,7 @@
                                 placeholder="Leave a message"></textarea>
                         </div>
 
-                        <div class="form-button-wrap">
+                        <div class="form-button-wrap intersect" data-animation="slideUp">
                             <button id="form-button">Submit</button>
                         </div>
 
