--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="self flex row wrap">
-                    <img class="intersect"  data-animation="slideRight" src="https://picsum.photos/id/532/300/200" alt="Picture of Me">
+                    <img class="intersect" data-animation="slideRight" src="https://picsum.photos/id/532/300/200"
+                        alt="Picture of Me">
                     <div class="flex bio intersect" data-animation="slideLeft">
                         <div class="section-header">Who am I?</div>
                         <p>Full Stack Developer with a background in Electrical Engineering. Along with this I have a
@@ -105,12 +106,18 @@
                 <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="projects flex row wrap">
-                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img1.jpg" alt="Project 1"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img src="./assets/images/img2.jpg" alt="Project 2"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img src="./assets/images/img3.jpg" alt="Project 3"></div>
-                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img4.jpg" alt="Project 4"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img src="./assets/images/img5.jpg" alt="Project 5"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img src="./assets/images/img6.jpg" alt="Project 6"></div>
+                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img1.jpg"
+                            alt="Project 1"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img
+                            src="./assets/images/img2.jpg" alt="Project 2"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img
+                            src="./assets/images/img3.jpg" alt="Project 3"></div>
+                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img4.jpg"
+                            alt="Project 4"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img
+                            src="./assets/images/img5.jpg" alt="Project 5"></div>
+                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img
+                            src="./assets/images/img6.jpg" alt="Project 6"></div>
                 </div>
             </div>
 
@@ -188,18 +195,33 @@
                             <button id="form-button">Submit</button>
                         </div>
 
-
-
                     </form>
+                </div>
+            </div>
+        </section>
+
+        <section id="footer">
+            <div class="container flex">
+
+                <div class="socials-wrap flex row">
+                    <a class="icon-wrap" href="">
+                        <div class="flex">
+                            <img src="./assets/images/linkedin.svg" alt="LinkedIn">
+                        </div>
+                    </a>
+                    <a class="icon-wrap" href="">
+                        <div class="icon flex">
+                            <img src="./assets/images/github.svg" alt="GitHub">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="copyright">
 
                 </div>
 
-
-
             </div>
-
         </section>
-
 
         <script src="./assets/javascript/script.js"></script>
 
