add collapsible navbar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a href="">Portfolio</a>
                     <a href="">Contact</a>
                 </div>
+                <div class="menu-icon">
+                    <img src="./assets/images/menu.svg" alt="menu-icon">
+                </div>
 
             </div>
 
