--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
             <div class="nav">
                 <div class="nav-links flex row">
-                    <a href="">Home</a>
-                    <a href="">About Me</a>
-                    <a href="">Portfolio</a>
-                    <a href="">Contact</a>
+                    <a class="link" href="#jumbotron">Home</a>
+                    <a class="link" href="#about">About Me</a>
+                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="#contact">Contact</a>
                 </div>
                 <div class="menu-icon">
                     <img src="./assets/images/menu.svg" alt="menu-icon">
