--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
             <div class="nav">
                 <div class="nav-links flex row">
-                    <a class="link" href="#jumbotron">Home</a>
-                    <a class="link" href="#about">About Me</a>
-                    <a class="link" href="#portfolio">Portfolio</a>
-                    <a class="link" href="#contact">Contact</a>
+                    <a class="link" href="" data-dest="#jumbotron">Home</a>
+                    <a class="link" href="" data-dest="#about">About Me</a>
+                    <a class="link" href="" data-dest="#portfolio">Portfolio</a>
+                    <a class="link" href="" data-dest="#contact">Contact</a>
                 </div>
                 <div class="menu-icon">
                     <img src="./assets/images/menu.svg" alt="menu-icon">
@@ -207,12 +207,12 @@
             <div class="container flex">
 
                 <div class="socials-wrap flex row">
-                    <a class="icon-wrap" href="">
+                    <a class="icon-wrap" href="https://github.com/sjwarren91" target="_blank">
                         <div class="flex">
                             <img src="./assets/images/linkedin.svg" alt="LinkedIn">
                         </div>
                     </a>
-                    <a class="icon-wrap" href="">
+                    <a class="icon-wrap" href="https://www.linkedin.com/in/samuel-warren-a90704b9/" target="_blank">
                         <div class="icon flex">
                             <img src="./assets/images/github.svg" alt="GitHub">
                         </div>
