add socials hover effects, add resize and animation delay relationship function

--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                 <div class="projects flex row wrap">
                     <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img1.jpg"
                             alt="Project 1"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img
+                    <div class="task intersect" data-animation="slideUp"><img
                             src="./assets/images/img2.jpg" alt="Project 2"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img
+                    <div class="task intersect" data-animation="slideUp"><img
                             src="./assets/images/img3.jpg" alt="Project 3"></div>
                     <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img4.jpg"
                             alt="Project 4"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.3s"><img
+                    <div class="task intersect" data-animation="slideUp"><img
                             src="./assets/images/img5.jpg" alt="Project 5"></div>
-                    <div class="task intersect" data-animation="slideUp" data-delay="0.6s"><img
+                    <div class="task intersect" data-animation="slideUp"><img
                             src="./assets/images/img6.jpg" alt="Project 6"></div>
                 </div>
             </div>
@@ -207,12 +207,12 @@
             <div class="container flex">
 
                 <div class="socials-wrap flex row">
-                    <a class="icon-wrap" href="https://github.com/sjwarren91" target="_blank">
+                    <a class="socials-icon-wrap" href="https://www.linkedin.com/in/samuel-warren-a90704b9/" target="_blank">
                         <div class="flex">
                             <img src="./assets/images/linkedin.svg" alt="LinkedIn">
                         </div>
                     </a>
-                    <a class="icon-wrap" href="https://www.linkedin.com/in/samuel-warren-a90704b9/" target="_blank">
+                    <a class="socials-icon-wrap" href="https://github.com/sjwarren91" target="_blank">
                         <div class="icon flex">
                             <img src="./assets/images/github.svg" alt="GitHub">
                         </div>
