add portfolio link effects and links

--- a/index.html
+++ b/index.html
@@ -109,18 +109,41 @@
                 <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="projects flex row wrap">
-                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img1.jpg"
-                            alt="Project 1"></div>
-                    <div class="task intersect" data-animation="slideUp"><img
-                            src="./assets/images/img2.jpg" alt="Project 2"></div>
-                    <div class="task intersect" data-animation="slideUp"><img
-                            src="./assets/images/img3.jpg" alt="Project 3"></div>
-                    <div class="task intersect" data-animation="slideUp"><img src="./assets/images/img4.jpg"
-                            alt="Project 4"></div>
-                    <div class="task intersect" data-animation="slideUp"><img
-                            src="./assets/images/img5.jpg" alt="Project 5"></div>
-                    <div class="task intersect" data-animation="slideUp"><img
-                            src="./assets/images/img6.jpg" alt="Project 6"></div>
+                    <div class="task intersect flex" data-animation="slideUp">
+                        <img src="./assets/images/img1.jpg" alt="Project 1">
+                        <div class="section-header">Hangman</div>
+                        <a href="https://sjwarren91.github.io/Word-Guess/" target="_blank">CHECK IT OUT</a>
+                    </div>
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img2.jpg"
+                            alt="Project 2">
+                        <div class="section-header">RPG Game</div>
+                        <a href="https://sjwarren91.github.io/unit-4-game/" target="_blank">CHECK IT OUT</a>
+                    </div>
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img3.jpg"
+                            alt="Project 3">
+                        <div class="section-header">Trivia Game</div>
+                        <a href="https://sjwarren91.github.io/TriviaGame/" target="_blank">CHECK IT OUT</a>
+                    </div>
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img4.jpg"
+                            alt="Project 4">
+                        <div class="section-header">GIFtastic!</div>
+                        <a href="https://sjwarren91.github.io/Giftastic/" target="_blank">CHECK IT OUT</a>
+                    </div>
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img5.jpg"
+                            alt="Project 5">
+                        <div class="section-header">Eat Sh*t</div>
+                        <a href="https://gerardwp.github.io/Group-Project/" target="_blank">CHECK IT OUT</a>
+                    </div>
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img6.jpg"
+                            alt="Project 6">
+                        <div class="section-header">TBA</div>
+                        <a href="" target="_blank">CHECK IT OUT</a>
+                    </div>
+
+
+
+
+
                 </div>
             </div>
 
@@ -207,7 +230,8 @@
             <div class="container flex">
 
                 <div class="socials-wrap flex row">
-                    <a class="socials-icon-wrap" href="https://www.linkedin.com/in/samuel-warren-a90704b9/" target="_blank">
+                    <a class="socials-icon-wrap" href="https://www.linkedin.com/in/samuel-warren-a90704b9/"
+                        target="_blank">
                         <div class="flex">
                             <img src="./assets/images/linkedin.svg" alt="LinkedIn">
                         </div>
