--- a/index.html
+++ b/index.html
@@ -112,32 +112,47 @@
                     <div class="task intersect flex" data-animation="slideUp">
                         <img src="./assets/images/img1.jpg" alt="Project 1">
                         <div class="section-header">Hangman</div>
-                        <a href="https://sjwarren91.github.io/Word-Guess/" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="https://sjwarren91.github.io/Word-Guess/" target="_blank">CHECK IT
+                            OUT</a>
+                        <a class="gitlink" href="https://github.com/sjwarren91/Word-Guess" target="_blank">CHECK THE
+                            CODE</a>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img2.jpg"
                             alt="Project 2">
                         <div class="section-header">RPG Game</div>
-                        <a href="https://sjwarren91.github.io/unit-4-game/" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="https://sjwarren91.github.io/unit-4-game/" target="_blank">CHECK IT
+                            OUT</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/unit-4-game" target="_blank">CHECK THE
+                                CODE</a>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img3.jpg"
                             alt="Project 3">
                         <div class="section-header">Trivia Game</div>
-                        <a href="https://sjwarren91.github.io/TriviaGame/" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="https://sjwarren91.github.io/TriviaGame/" target="_blank">CHECK IT
+                            OUT</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/TriviaGame" target="_blank">CHECK THE
+                                CODE</a>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img4.jpg"
                             alt="Project 4">
                         <div class="section-header">GIFtastic!</div>
-                        <a href="https://sjwarren91.github.io/Giftastic/" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="https://sjwarren91.github.io/Giftastic/" target="_blank">CHECK IT
+                            OUT</a>
+                        <a class="gitlink" href="https://github.com/sjwarren91/Giftastic" target="_blank">CHECK THE
+                            CODE</a>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img5.jpg"
                             alt="Project 5">
                         <div class="section-header">Eat Sh*t</div>
-                        <a href="https://gerardwp.github.io/Group-Project/" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="https://gerardwp.github.io/Group-Project/" target="_blank">CHECK IT
+                            OUT</a>
+                        <a class="gitlink" href="https://github.com/sjwarren91/Group-Project" target="_blank">CHECK THE
+                            CODE</a>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img6.jpg"
                             alt="Project 6">
                         <div class="section-header">TBA</div>
-                        <a href="" target="_blank">CHECK IT OUT</a>
+                        <a class="portlink" href="" target="_blank">CHECK IT OUT</a>
                     </div>
 
                 </div>
