--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 
                 <div class="projects flex row wrap">
                     <div class="task intersect flex" data-animation="slideUp">
-                        <img src="./assets/images/img1.jpg" alt="Project 1">
+                        <img src="./assets/images/hangman.jpg" alt="Project 1">
                         <div class="section-header">Hangman</div>
                         <a class="portlink" href="https://sjwarren91.github.io/Word-Guess/" target="_blank">CHECK IT
                             OUT</a>
                         <a class="gitlink" href="https://github.com/sjwarren91/Word-Guess" target="_blank">CHECK THE
                             CODE</a>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img2.jpg"
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/space-fights.jpg"
                             alt="Project 2">
                         <div class="section-header">RPG Game</div>
                         <a class="portlink" href="https://sjwarren91.github.io/unit-4-game/" target="_blank">CHECK IT
@@ -125,7 +125,7 @@
                             <a class="gitlink" href="https://github.com/sjwarren91/unit-4-game" target="_blank">CHECK THE
                                 CODE</a>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img3.jpg"
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img4.jpg"
                             alt="Project 3">
                         <div class="section-header">Trivia Game</div>
                         <a class="portlink" href="https://sjwarren91.github.io/TriviaGame/" target="_blank">CHECK IT
@@ -133,15 +133,13 @@
                             <a class="gitlink" href="https://github.com/sjwarren91/TriviaGame" target="_blank">CHECK THE
                                 CODE</a>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img4.jpg"
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/liri.jpg"
                             alt="Project 4">
-                        <div class="section-header">GIFtastic!</div>
-                        <a class="portlink" href="https://sjwarren91.github.io/Giftastic/" target="_blank">CHECK IT
-                            OUT</a>
-                        <a class="gitlink" href="https://github.com/sjwarren91/Giftastic" target="_blank">CHECK THE
+                        <div class="section-header">LIRI BOT</div>
+                        <a class="gitlink" href="https://github.com/sjwarren91/LIRI-node-app" target="_blank">CHECK THE
                             CODE</a>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img5.jpg"
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/eatsh-t.jpg"
                             alt="Project 5">
                         <div class="section-header">Eat Sh*t</div>
                         <a class="portlink" href="https://gerardwp.github.io/Group-Project/" target="_blank">CHECK IT
@@ -149,10 +147,12 @@
                         <a class="gitlink" href="https://github.com/sjwarren91/Group-Project" target="_blank">CHECK THE
                             CODE</a>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img6.jpg"
+                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/staxx.jpg"
                             alt="Project 6">
-                        <div class="section-header">TBA</div>
-                        <a class="portlink" href="" target="_blank">CHECK IT OUT</a>
+                        <div class="section-header">Staxx</div>
+                        <a class="portlink" href="https://shrouded-brook-64155.herokuapp.com/" target="_blank">CHECK IT OUT</a>
+                        <a class="gitlink" href="https://github.com/sjwarren91/Staxx" target="_blank">CHECK THE
+                            CODE</a>
                     </div>
 
                 </div>
