add project descriptions and technologies

--- a/index.html
+++ b/index.html
@@ -112,47 +112,89 @@
                     <div class="task intersect flex" data-animation="slideUp">
                         <img src="./assets/images/hangman.jpg" alt="Project 1">
                         <div class="section-header">Hangman</div>
-                        <a class="portlink" href="https://sjwarren91.github.io/Word-Guess/" target="_blank">CHECK IT
-                            OUT</a>
-                        <a class="gitlink" href="https://github.com/sjwarren91/Word-Guess" target="_blank">CHECK THE
-                            CODE</a>
+                        <p>A game of hangman made for the browser</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-css3-alt" style="color: #1A70B5"></i>
+                            <i class="fab fab2 fa-html5" style="color: #E34F26"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+
+                        <div class="flex">
+                            <a class="portlink" href="https://sjwarren91.github.io/Word-Guess/"
+                                target="_blank">WEBSITE</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/Word-Guess" target="_blank">CODE</a>
+                        </div>
                     </div>
-                    <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/space-fights.jpg"
-                            alt="Project 2">
+                    <div class="task intersect flex" data-animation="slideUp"><img
+                            src="./assets/images/space-fights.jpg" alt="Project 2">
                         <div class="section-header">RPG Game</div>
-                        <a class="portlink" href="https://sjwarren91.github.io/unit-4-game/" target="_blank">CHECK IT
-                            OUT</a>
-                            <a class="gitlink" href="https://github.com/sjwarren91/unit-4-game" target="_blank">CHECK THE
-                                CODE</a>
+                        <p>Choose your favourite character and battle for victory!</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-css3-alt" style="color: #1A70B5"></i>
+                            <i class="fab fab2 fa-html5" style="color: #E34F26"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+                        <div class="flex">
+                            <a class="portlink" href="https://sjwarren91.github.io/unit-4-game/"
+                                target="_blank">WEBSITE</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/unit-4-game" target="_blank">CODE</a>
+                        </div>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/img4.jpg"
                             alt="Project 3">
                         <div class="section-header">Trivia Game</div>
-                        <a class="portlink" href="https://sjwarren91.github.io/TriviaGame/" target="_blank">CHECK IT
-                            OUT</a>
-                            <a class="gitlink" href="https://github.com/sjwarren91/TriviaGame" target="_blank">CHECK THE
-                                CODE</a>
+                        <p>Lord of the Rings Trivia Game</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-css3-alt" style="color: #1A70B5"></i>
+                            <i class="fab fab2 fa-html5" style="color: #E34F26"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+                        <div class="flex">
+                            <a class="portlink" href="https://sjwarren91.github.io/TriviaGame/"
+                                target="_blank">WEBSITE</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/TriviaGame" target="_blank">CODE</a>
+                        </div>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/liri.jpg"
                             alt="Project 4">
                         <div class="section-header">LIRI BOT</div>
-                        <a class="gitlink" href="https://github.com/sjwarren91/LIRI-node-app" target="_blank">CHECK THE
-                            CODE</a>
+                        <p>A command line app that calls various APIs</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-node-js" style="color: #6A9D5B"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+                        <div class="flex">
+
+                            <a class="gitlink" href="https://github.com/sjwarren91/LIRI-node-app" target="_blank">CODE</a>
+                        </div>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/eatsh-t.jpg"
                             alt="Project 5">
                         <div class="section-header">Eat Sh*t</div>
-                        <a class="portlink" href="https://gerardwp.github.io/Group-Project/" target="_blank">CHECK IT
-                            OUT</a>
-                        <a class="gitlink" href="https://github.com/sjwarren91/Group-Project" target="_blank">CHECK THE
-                            CODE</a>
+                        <p>An attempt to stimulate business in restaurants with bad reviews</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-node-js" style="color: #6A9D5B"></i>
+                            <i class="fab fab2 fa-css3-alt" style="color: #1A70B5"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+                        <div class="flex">
+                            <a class="portlink" href="https://gerardwp.github.io/Group-Project/" target="_blank">WEBSITE</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/Group-Project" target="_blank">CODE</a>
+                        </div>
                     </div>
                     <div class="task intersect flex" data-animation="slideUp"><img src="./assets/images/staxx.jpg"
                             alt="Project 6">
                         <div class="section-header">Staxx</div>
-                        <a class="portlink" href="https://shrouded-brook-64155.herokuapp.com/" target="_blank">CHECK IT OUT</a>
-                        <a class="gitlink" href="https://github.com/sjwarren91/Staxx" target="_blank">CHECK THE
-                            CODE</a>
+                        <p>Track your Stack! An expense tracking App</p>
+                        <div class="flex row made-with">
+                            <i class="fab fab2 fa-node-js" style="color: #6A9D5B"></i>
+                            <i class="fab fab2 fa-css3-alt" style="color: #1A70B5"></i>
+                            <i class="fab fab2 fa-js-square" style="color: #EE7E32"></i>
+                        </div>
+                        <div class="flex">
+                            <a class="portlink" href="https://shrouded-brook-64155.herokuapp.com/" target="_blank">WEBSITE</a>
+                            <a class="gitlink" href="https://github.com/sjwarren91/Staxx" target="_blank">CODE</a>
+                        </div>
                     </div>
 
                 </div>
